Modified About Me page

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -40,6 +40,8 @@
         <div id="grid-head">
             <center><h1 class="pages">About Me</h1></center>
             <center><h1>Andrew Rotert</h1></center>
+            <center><h3><object class="title-tag">&lt;&Tab;&Tab;</object><object class="increase-font"> Software Engineer </object><object class="title-tag">&Tab;&Tab;&#x2F;&gt;</object></h3></center>
+            
         </div>
 
         <div id="grid-image">
@@ -53,9 +55,18 @@
                 development. This has lead to me getting six iOS apps published, and one published Android app. Durning my third year I started and completed many new projects, including this website as way to show my work and support
                 for my published applications. I look forward to new challenges with every project I start.
             </p>
-            <a href="Projects.html" class="projectsLink">View my projects page here.</a>
         </div>
+        <div id="grid-project">
+            <center><h1 class="pages">Projects</h1></center>
+            <div id="projects-page" onclick="location.href = 'Projects.html'">
+                <center>
+                    <a href="Projects.html" class="projectsLink">View my projects page here.</a>
+                    <br /><br />
+                    <img class="resize-projects" src="Images/AppLogos/ProjectsBanner.png" alt="Project Logos" />
+                </center>
+            </div>
 
+        </div>
         <div id="grid-main">
             <center><h1 class="pages">Resume</h1></center>
             <div>
