Added Language Used to current project

--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -82,7 +82,7 @@
                 <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
                 <h2><i>Developed Not Download</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">View Repository</a></p>
-                <p>Language Used: HTML5, CSS3</p>
+                <p>Language Used: HTML5, CSS3, JavaScript</p>
                 <p>About:</p>
                 <p class="just">
                     Developed Not Downloaded is a series of static webpages designed with HTML and CSS. It is my main website to
