Added tags, and filtering to my projects page.

--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -1,11 +1,12 @@
 ﻿<div class="grid-container">
-    <div class="block_region">
+    <div class="block_region ood-tag advanced-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
                 <h2><i>Grip Finder</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/Grip-Finder">View Repository</a></p>
+                <p>Tags:  <object class="tag">Object Oriented Design</object> <object class="tag">Advanced Algorithms</object></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -18,13 +19,14 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region ood-tag advanced-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
                 <h2><i>Minesweeper</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/AR.Minesweeper">View Repository</a></p>
+                <p>Tags:  <object class="tag">Object Oriented Design</object> <object class="tag">Advanced Algorithms</object></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -37,13 +39,14 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region regex-tag team-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/Tsharp.png" alt="Tsharp" />
                 <h2><i>Tsharp</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/Language-Processing">View Repository</a></p>
+                <p>Tags: <object class="tag">Regular Expressions</object> <object class="tag">Team Collaboration</object></p>
                 <p>Language Used: Yacc, Lex, C</p>
                 <p>About:</p>
                 <p class="just">
@@ -56,13 +59,14 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region stack-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
                 <h2><i>Mini-Golf</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/Assembely">View Repository</a></p>
+                <p>Tags: <object class="tag">Stack</object></p>
                 <p>Language Used: Assembly x86</p>
                 <p>About:</p>
                 <p class="just">
@@ -75,31 +79,34 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region hosted-tag database-tag firebase-tag functions-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
                 <h2><i>Developed Not Download</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">View Repository</a></p>
+                <p>Tags: <object class="tag">Hosted</object> <object class="tag">Database Integration</object> <object class="tag">Google Firebase</object> <object class="tag">Cloud Functions</object></p>
                 <p>Language Used: HTML5, CSS3, JavaScript</p>
                 <p>About:</p>
                 <p class="just">
                     Developed Not Downloaded is a series of static webpages designed with HTML and CSS. It is my main website to
-                    showcase my projects, and provide support to my published applications.
+                    showcase my projects, and provide support to my published applications. Also hosts my App API project, which
+                    uses a google cloud funtions to access Apple's API and display the number of downloads on my iOS apps.
                 </p>
 
                 <hr class="table" />
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region hosted-tag database-tag firebase-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
                 <h2><i>FireChat</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">View Repository</a></p>
+                <p>Tags: <object class="tag">Hosted</object> <object class="tag">Database Integration</object> <object class="tag">Google Firebase</object> </p>
                 <p>Language Used: HTML5, CSS3, JavaScript</p>
                 <p>About:</p>
                 <p class="just">
@@ -111,13 +118,14 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region ood-tag thread-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <img class="resizing" src="Images/Projects/ClientHost.png" alt="Website" />
                 <h2><i>Client / Host Communication</i></h2>
                 <p>See the code: <a href="https://github.com/ajrotert/BasicClientServerConnections">View Repository</a></p>
+                <p>Tags: <object class="tag">Object Oriented Design</object> <object class="tag">Multithreaded</object></p>
                 <p>Language Used: Java</p>
                 <p>About:</p>
                 <p class="just">
@@ -130,7 +138,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region hosted-tag machine-tag team-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -138,6 +146,7 @@
                 <h2><i>Numeric Detector</i></h2>
                 <p>Live Demonstration: <a href="https://codepython.life">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/NumberDetection">View Repository</a></p>
+                <p>Tags: <object class="tag">Hosted</object> <object class="tag">Machine Learning</object> <object class="tag">Team Collaboration</object></p>
                 <p>Language Used: JavaScript, HTML5, CSS3</p>
                 <p>About:</p>
                 <p class="just">
@@ -149,11 +158,12 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region advanced-tag team-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
                 <h2><i>Programming Competitions</i></h2>
+                <p>Tags: <object class="tag">Advanced Algorithms</object> <object class="tag">Team Collaboration</object></p>
                 <p>Language Used: C++, Python, C# </p>
                 <p>About:</p>
                 <p class="just">
