--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -1,5 +1,5 @@
 ﻿<div class="grid-container">
-    <div class="block_region">
+    <div class="block_region published-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -8,6 +8,7 @@
                 <p>Published: <a href="LiftCoefficientCalculator.html">Support Page</a></p>
                 <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/Lift-Coefficient-Calculator">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> </p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
