--- a/Dynamic/HTML/iOSPlaceholder.html
+++ b/Dynamic/HTML/iOSPlaceholder.html
@@ -1,5 +1,5 @@
 ﻿<div class="grid-container">
-    <div class="block_region">
+    <div class="block_region published-tag ood-tag advanced-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -8,6 +8,7 @@
                 <p>Published: <a href="PutterFitter.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/putter-fitter/id1448329273?mt=8">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/Putter-Fitting-IOS">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Object Oriented Design</object> <object class="tag">Advanced Algorithms</object></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -20,7 +21,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region published-tag ood-tag database-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -29,6 +30,7 @@
                 <p>Published: <a href="TrapshootingScorecard.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/trap-shooting-scorecard/id1450821405?mt=8">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/TrapShootingScorecard-IOS">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Object Oriented Design</object> <object class="tag">Database Integration</object></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -41,7 +43,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region published-tag ood-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -50,6 +52,7 @@
                 <p>Published: <a href="ComputerScienceCalculator.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/computer-science-converter/id1451753843?mt=8">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/Computer-Science-Calculator">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Object Oriented Design</object></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -62,7 +65,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region published-tag thread-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -71,6 +74,7 @@
                 <p>Published: <a href="SpeedometerPlusMap.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/Simple-Speedometer-and-Map">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Multithreaded</object></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -83,7 +87,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region published-tag database-tag thread-tag team-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -92,6 +96,7 @@
                 <p>Published: <a href="HolidayClicker.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/Holiday-Clicker">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Database Integration</object> <object class="tag">Multithreaded</object> <object class="tag">Team Collaboration</object></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -104,7 +109,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region ood-tag database-tag thread-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -113,6 +118,7 @@
                 <p>Not Yet Published</p>
                 <p>View progress on Github: <a href="https://github.com/ajrotert">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/On-The-Hunt">View Repository</a></p>
+                <p>Tags:  <object class="tag">Object Oriented Design</object> <object class="tag">Database Integration</object> <object class="tag">Multithreaded</object></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -125,7 +131,7 @@
             </center>
         </div>
     </div>
-    <div class="block_region">
+    <div class="block_region published-tag augmented-tag">
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
@@ -134,6 +140,7 @@
                 <p>Published: <a href="AugmentedRealityVisualizer.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/augmented-reality-visualizer/id1515131292">Visit Now</a></p>
                 <p>See the code: <a href="https://github.com/ajrotert/AugmentedReality">View Repository</a></p>
+                <p>Tags:  <object class="tag">Published</object> <object class="tag">Augmented Reality</object></p>
                 <p>Language Used: Swift</p>
                 <p>About:</p>
                 <p class="just">
