Added name to projects page

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -50,7 +50,7 @@
         <div id="grid-content">
             <center><p class="bio">Short Bio:</p></center>
             <p class="just bio">
-                I am from Sioux Falls, SD. I got into programming in high school with my ability to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
+                I am from Sioux Falls, SD. I got into programming with my ability to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
                 I enjoy taking on new challenges and learning new techniques to solve them. Over my sophomore year of college, after completing Object Oriented design, I got into mobile app
                 development. This has lead to me getting six iOS apps published, and one published Android app. Durning my third year I started and completed many new projects, including this website as way to show my work and support
                 for my published applications. I look forward to new challenges with every project I start.
