--- a/Projects.html
+++ b/Projects.html
@@ -41,8 +41,13 @@
     <center><h1 class="pages">Personal Projects</h1></center>
 
     <hr class="projects" />
-    <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
-    <hr class="projects" />
+    <div>
+        <center><h1>Andrew Rotert</h1></center>
+        <center><h3><object class="title-tag">&lt;&Tab;&Tab;</object><object class="increase-font"> Software Engineer </object><object class="title-tag">&Tab;&Tab;&#x2F;&gt;</object></h3></center>
+        <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
+        <hr class="projects" />
+    </div>
+
 
     <br />
     <!-- advanced-tag augmented-tag database-tag hosted-tag firebase-tag functions-tag machine-tag ood-tag published-tag stack-tag team-tag thread-tag -->
