--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -103,15 +103,17 @@
         <a class="overlay_region"></a>
         <div class="inner_region">
             <center>
-                <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
-                <h2><i>FireChat</i></h2>
-                <p>See the code: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">View Repository</a></p>
+                <img class="resizing" src="Images/Projects/productbacklogdev.png" alt="Website" />
+                <h2><i>Product Backlog Developer</i></h2>
+                <p>Live Demonstration: <a href="https://productbacklog.dev">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/productbacklog">View Repository</a></p>
                 <p>Tags: <object class="tag">Hosted</object> <object class="tag">Database Integration</object> <object class="tag">Google Firebase</object> </p>
-                <p>Language Used: HTML5, CSS3, JavaScript</p>
+                <p>Language Used: HTML5, CSS3, JavaScript, React</p>
                 <p>About:</p>
                 <p class="just">
-                    FireChat is my project website where I explore new ideas and concepts. Currently I have experimented with Firebase realtime database storage
-                    responsive layouts, and CSS Grid views.
+                    Product Backlog Developer is a dynamic web application. It is built using a firebase backend, and react frontend. Users can sign in through the firebase
+                    authentication UI, and create their own product backlog. Users can add stories or defects to their backlog, remove stories or defects, and complete backlog items.
+                    Realtime database access allows multiple users to manage the same backlog.
                 </p>
 
                 <hr class="table" />
