--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/BusinessLayout.css" />
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 </head>
 <body>
@@ -241,13 +240,14 @@
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
-            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+            <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
 
     </footer>
-    <script src="Dynamic/NavigationBarJS.js"></script>
-
-    <script src="Dynamic/NavBar.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script type="text/babel" src="Dynamic/reactnav.js"></script>
 
 </body>
 </html>
