--- a/ContactUs.html
+++ b/ContactUs.html
@@ -24,10 +24,6 @@
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/ContactLayout.css" />
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="Dynamic/send.js"></script>
-
 </head>
 <body>
     <div>
@@ -35,7 +31,7 @@
         <hr class="nav" />
     </div>
 
-    <object id="nav-placeholder" ></object>
+    <object id="nav-placeholder"></object>
 
     <hr class="nav" />
 
@@ -140,12 +136,16 @@
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
-            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+            <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
 
     </footer>
-    <script src="Dynamic/NavigationBarJS.js"></script>
-    <script src="Dynamic/NavBar.js"></script>
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+
 </body>
 </html>
 
