--- a/Projects.html
+++ b/Projects.html
@@ -93,14 +93,15 @@
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
-            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+            <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
 
     </footer>
 
-    <script src="Dynamic/NavigationBarJS.js"></script>
-
-    <script src="Dynamic/NavBar.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script type="text/babel" src="Dynamic/reactnav.js"></script>
 
     <script src="Dynamic/loadprojects.js"></script>
 
