--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/IndexLayout.css" />
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
     <script>if (document.location.hostname.includes("cs-developer") && document.referrer == "") {
             document.location.href = "http://cs-developer.info/AboutMe.html"
         }
@@ -103,7 +103,7 @@ body {
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
-            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+            <p class="bottom_position">&copy; Copyright 2019-2020 Andrew Rotert</p>
         </div>
 
     </footer>
@@ -131,9 +131,10 @@ body {
         </table>
     </div>
 
-    <script src="Dynamic/NavigationBarJS.js"></script>
-
-    <script src="Dynamic/NavBar.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script type="text/babel" src="Dynamic/reactnav.js"></script>
 
 </body>
 </html>
