--- a/Other.html
+++ b/Other.html
@@ -25,8 +25,6 @@
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/ProjectLayout.css" />
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
 </head>
 <body>
     <div>
@@ -56,11 +54,14 @@
     </footer>
 
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
 
-    <script src="Dynamic/loadprojects.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
+
+    <script type="text/babel" src="Dynamic/react_project_other.js"></script>
 
     <script src="Dynamic/Scripts/PageLoader.js"></script>
 
