--- a/iOS.html
+++ b/iOS.html
@@ -25,8 +25,6 @@
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/ProjectLayout.css" />
 
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
 </head>
 <body>
     <div>
@@ -59,7 +57,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
     <script type="text/babel" src="Dynamic/reactnav.js"></script>
 
-    <script src="Dynamic/loadprojects.js"></script>
+    <script type="text/babel" src="Dynamic/react_project_ios.js"></script>
 
     <script src="Dynamic/Scripts/PageLoader.js"></script>
 
