--- a/Other.html
+++ b/Other.html
@@ -29,11 +29,11 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
+    <hr class="nav" />
     <nav id="nav-placeholder"></nav>
-
     <hr class="nav" />
 
     <center><h1 class="pages">Other Projects</h1></center>
@@ -61,7 +61,8 @@
     <script type="text/babel" src="Dynamic/reactnav.js">
     </script>
 
-    <script type="text/babel" src="Dynamic/react_project_other.js"></script>
+    <script type="text/babel" src="Dynamic/react_project_other.js">
+    </script>
 
     <script src="Dynamic/Scripts/PageLoader.js"></script>
 
