--- a/Projects.html
+++ b/Projects.html
@@ -29,11 +29,11 @@
 <body id="ContactUs">
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
+    <hr class="nav" />
     <nav id="nav-placeholder"></nav>
-
     <hr class="nav" />
 
     <center><h1 class="pages">Personal Projects</h1></center>
@@ -99,11 +99,15 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
 
-    <script type="text/babel" src="Dynamic/react_project_ios.js"></script>
-    <script type="text/babel" src="Dynamic/react_project_android.js"></script>
-    <script type="text/babel" src="Dynamic/react_project_other.js"></script>
+    <script type="text/babel" src="Dynamic/react_project_ios.js">
+    </script>
+    <script type="text/babel" src="Dynamic/react_project_android.js">
+    </script>
+    <script type="text/babel" src="Dynamic/react_project_other.js">
+    </script>
 
 
     <script src="Dynamic/Scripts/PageLoader.js"></script>
