--- a/HolidayClicker.html
+++ b/HolidayClicker.html
@@ -28,12 +28,13 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
-    <nav id="nav-placeholder"></nav>
-
     <hr class="nav" />
+    <nav id="nav-placeholder"></nav>
+    <hr class="nav" />
+
     <nav>
         <ul class="sidenav effect">
             <li class="sidenav"><img src="Images/AppLogos/HC.png" /></li>
@@ -175,7 +176,8 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
 
 </body>
 </html>
