--- a/ProjectView.html
+++ b/ProjectView.html
@@ -32,11 +32,11 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
+    <hr class="nav" />
     <nav id="nav-placeholder"></nav>
-
     <hr class="nav" />
 
     <center><h1 class="pages" id="title">Project View</h1></center>
@@ -59,7 +59,8 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
 
     <script src="Dynamic/Scripts/LoadPage.js"></script>
 
