--- a/iOS.html
+++ b/iOS.html
@@ -29,12 +29,13 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
-        <hr class="nav" />
+        <p class="top-name">By Andrew Rotert</p>
     </div>
 
-    <nav id="nav-placeholder"></nav>
-
     <hr class="nav" />
+    <nav id="nav-placeholder"></nav>
+    <hr class="nav" />
+
     <center><h1 class="pages">iOS Projects</h1></center>
 
     <hr class="projects" />
@@ -55,9 +56,11 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script type="text/babel" src="Dynamic/reactnav.js"></script>
+    <script type="text/babel" src="Dynamic/reactnav.js">
+    </script>
 
-    <script type="text/babel" src="Dynamic/react_project_ios.js"></script>
+    <script type="text/babel" src="Dynamic/react_project_ios.js">
+    </script>
 
     <script src="Dynamic/Scripts/PageLoader.js"></script>
 
