Add project demos

--- a/ProjectView.html
+++ b/ProjectView.html
@@ -43,6 +43,8 @@
 
     <object id="placeholder" class="region"></object>
 
+    <object id="demo-placeholder"></object>
+
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
     <hr class="projects" />
