Support of mobile

--- a/ProjectView.html
+++ b/ProjectView.html
@@ -43,7 +43,7 @@
 
     <object id="placeholder" class="region"></object>
 
-    <object id="demo-placeholder" class="max"></object>
+    <object id="demo-placeholder"></object>
 
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
