Updated projects pages

--- a/ProjectView.html
+++ b/ProjectView.html
@@ -39,11 +39,15 @@
     <nav id="nav-placeholder"></nav>
     <hr class="nav" />
 
-    <center><h1 class="pages" id="title">Project View</h1></center>
+    <div class="project-group">
+        <center><h1 class="pages" id="title">Project View</h1></center>
+        <br />
+        <center><h2 class="pages" id="title">Project Demo:</h2></center>
+        <object id="demo-placeholder"></object>
+        <center><h2 class="pages margin-top" id="title">Project Description:</h2></center>
+        <object id="placeholder" class="region"></object>
 
-    <object id="placeholder" class="region"></object>
-
-    <object id="demo-placeholder"></object>
+    </div>
 
     <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
