--- a/Projects.html
+++ b/Projects.html
@@ -38,8 +38,8 @@
 
     <center><h1 class="pages">Personal Projects</h1></center>
 
-    <hr class="projects" />
     <div>
+        <hr class="projects" />
         <center><h1>Andrew Rotert</h1></center>
         <center><h3><object class="title-tag">&lt;&Tab;&Tab;</object><object class="increase-font"> Software Engineer </object><object class="title-tag">&Tab;&Tab;&#x2F;&gt;</object></h3></center>
         <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
@@ -68,7 +68,7 @@
         </select>
     </div>
     <br />
-
+    <center><p class="bolder">Click on a project to view a demonstration.</p></center>
     <div class="smaller">
         <center>
             <h1>iOS Projects</h1>
