Update project design

--- a/Projects.html
+++ b/Projects.html
@@ -53,6 +53,7 @@
         <label id="tag-label" for="tag-selector">Filter projects by tags: </label>
         <select id="tag-selector" name="tag-selector" onchange="tagSelectorFunction()">
             <option value="All">All</option>
+            <option value="top3-tag">Top 3 Projects</option>
             <option value="augmented-tag">Augmented Reality</option>
             <option value="advanced-tag">Advanced Algorithms</option>
             <option value="database-tag">Database Integration</option>
